sample/asm/errors/entering_undefined_block.asm
.function: main
    try
    enter foo

    izero 0
    return
.end
